# AutoCut

./: LICENSE  README.md  pyproject.toml
autocut/: __main__.py  auto_editor.py  constant.py  edit.py  launch.py  xml_maker.py
